--- a/BlazingPizza/Shared/ConfigurePizzaDialog.razor
+++ b/BlazingPizza/Shared/ConfigurePizzaDialog.razor
@@ -9,7 +9,10 @@
     <form class="dialog-body">
       <div>
         <label>Size:</label>
-        <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" />
+        <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1"
+        @bind="Pizza.Size"
+        @bind:event="oninput"
+        />
         <span class="size-label">
           @(Pizza.Size)" (₤@(Pizza.GetFormattedTotalPrice()))
         </span>
