--- a/BlazingPizza/Pages/Checkout.razor
+++ b/BlazingPizza/Pages/Checkout.razor
@@ -10,23 +10,11 @@
             <h4>
                 Review Order
             </h4>
-            @foreach (var pizza in order.Pizzas)
-            {
-                <p>
-                    <strong>
-                        @(pizza.Size)"
-                        @pizza.Special.Name
-                        (₤@pizza.GetFormattedTotalPrice())
-                    </strong>
-                </p>
-            }
-
-            <p>
-                <strong>
-                    Total Price:
-                    (₤@order.GetFormattedTotalPrice())
-                </strong>
-            </p>
+           <OrderReview order="order" />
+        </div>
+        <div class="checkout-delivery-address">
+            <h4>Deliver to...</h4>
+            <AddressEditor Address="order.DeliveryAddress" />
         </div>
     </div>
 
