--- a/BlazingPizza/Pages/Index.razor
+++ b/BlazingPizza/Pages/Index.razor
@@ -3,6 +3,7 @@
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 @inject OrderState OrderState
+@inject IJSRuntime Javascript
 
 <div class="main">
     <ul class="pizza-cards">
@@ -35,7 +36,10 @@
                     <div class="item-price">
                         @configuredPizza.GetFormattedTotalPrice()
                     </div>
-                    <a @onclick="@(()=>OrderState.RemoveConfiguredPizza(configuredPizza))" class="delete-item">X</a>
+                    <button type="button" class="close text-danger" aria-label="Close"
+                    @onclick="@(async () => await RemovePizzaConfirmation(configuredPizza))">
+                    <span aria-hidden="true">&times;</span>
+                </button>
                 </div>
             }
         </div>
@@ -69,6 +73,25 @@
     {
         specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials");
     }
+    async Task RemovePizzaConfirmation(Pizza removePizza)
+    {
+        var messageParams = new
+        {
+            title = "Remove Pizza?",
+            text = $"""Do you want to remove the "{removePizza.Special.Name}" from your order?""",
+            icon = "warning",
+            buttons = new
+            {
+                abort = new { text = "No, leave it in my order", value = false },
+                confirm = new { text = "Yes, remove pizza", value = true }
+            },
+            dangerMode = true
+        };
 
+        if (await Javascript.InvokeAsync<bool>("swal", messageParams    ))
+        {
+            OrderState.RemoveConfiguredPizza(removePizza);
+        }
+    }
 
 }
