--- a/BlazingPizza/Pages/MyOrders.razor
+++ b/BlazingPizza/Pages/MyOrders.razor
@@ -1,6 +1,7 @@
 ﻿@page "/myorders"
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@using BlazingPizza.Components
 
 <div class="main">
     @if (_orderWithStatuses == null)
@@ -14,31 +15,39 @@
     }
     else
     {
-        <div class="list-group orders-list">
-            @foreach (var item in _orderWithStatuses)
-            {
-                <div class="list-group-item">
+        <PaginationComponent TItem="OrderWithStatus"
+            Items="_orderWithStatuses.OrderBy(o=>o.Order.CreatedTime).ToList()"
+            ItemLabel='item => new($"{item.Order.CreatedTime:ddd, MMM. d, yyyy}")'
+            >
+            <ItemContent>
+                <div class="list-group-item bg-secondary text-white">
                     <div class="col">
-                        <h5>@item.Order.CreatedTime.ToLongDateString()</h5>
+                        <h5>@($"{context.Order.CreatedTime:dddd, MMMM d, yyyy hh:mm tt}")</h5>
                         Items:
-                        <strong>@item.Order.Pizzas.Count()</strong>
-                        Total Price:
-                        <strong>$@item.Order.GetFormattedTotalPrice()</strong>
+                        <strong>@context.Order.Pizzas.Count()</strong>
+                       
                     </div>
                     <div class="col">
-                        Status: <strong>@item.StatusText</strong>
+                        Status: <strong>@context.StatusText</strong>
                     </div>
-                    @if (item.StatusText != "Delivered")
+                    @if (context.StatusText != "Delivered")
                     {
                         <div class="col flex-grow-0">
-                            <a href="myorders/@item.Order.OrderId" class="btn btn-success">
+                            <a href="myorders/@context.Order.OrderId" class="btn btn-success">
                                 Track &gt;
-                                </a>
+                            </a>
                         </div>
                     }
                 </div>
-            }
-        </div>
+                <div class="list-group-item">
+                    <div class="col">
+                        <OrderReview order="@context.Order" />
+                    </div>
+                </div>
+
+            </ItemContent>
+        </PaginationComponent>
+     
     }
 </div>
 
