--- a/BlazingPizza/Pages/OrderDetail.razor
+++ b/BlazingPizza/Pages/OrderDetail.razor
@@ -1,6 +1,7 @@
 ﻿@page "/myorders/{orderId:int}"
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@implements IDisposable 
 
 <div class="main">
     @if (invalidOrder)
@@ -28,12 +29,18 @@
                 <h2>
                     Order placed @orderWithStatus.Order.CreatedTime.ToLongDateString()
                 </h2>
-                <p class="ml-auto mb-0">
+                <p class="ms-auto mb-1">
                     Status: <strong>@orderWithStatus.StatusText</strong>
                 </p>
             </div>
             <div class="track-order-body">
                 <div class="track-order-details">
+                    @if (IsOrderIncomplete)
+                    {
+                        <div class="spinner-grow text-danger float-end" role="status">
+                            <span class="visually-hidden">Checking your order status...</span>
+                            </div>
+                    }
                     @foreach (var pizza in orderWithStatus.Order.Pizzas)
                     {
                         <p>
@@ -53,10 +60,25 @@
 @code {
     [Parameter]
     public int OrderId { get; set; }
+    bool IsOrderIncomplete => orderWithStatus is null || orderWithStatus.IsDelivered == false;
+
+    PeriodicTimer timer = new(TimeSpan.FromSeconds(3));
+
     OrderWithStatus orderWithStatus;
     bool invalidOrder = false;
 
-    protected override async Task OnParametersSetAsync()
+    protected override Task OnAfterRenderAsync(bool firstRender) => 
+    firstRender ? StartPollingTimerAsync() : Task.CompletedTask;
+
+    async Task StartPollingTimerAsync()
+    {
+        while (IsOrderIncomplete && await timer.WaitForNextTickAsync())
+        {
+            await GetLatestOrderStatusUpdatesAsync();
+            StateHasChanged();
+        }
+    }
+    async Task GetLatestOrderStatusUpdatesAsync()
     {
         try
         {
@@ -70,4 +92,6 @@
             Console.Error.WriteLine(ex);
         }
     }
+
+    public void Dispose() => timer.Dispose();
 }
