--- a/BlazingPizza/Shared/ConfigurePizzaDialog.razor
+++ b/BlazingPizza/Shared/ConfigurePizzaDialog.razor
@@ -8,11 +8,13 @@
     </div>
     <form class="dialog-body">
       <div>
-        <label>Size:</label>
+                @if (supportSizing)
+                {              
+                <label>Size:</label>
         <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1"
         @bind="Pizza.Size"
-        @bind:event="oninput"
-        />
+        @bind:event="oninput" />
+                }
         <span class="size-label">
           @(Pizza.Size)" (₤@(Pizza.GetFormattedTotalPrice()))
         </span>
@@ -33,4 +35,14 @@
     [Parameter] public Pizza Pizza { get; set; }
     [Parameter] public EventCallback OnCancel{ get; set; }
     [Parameter] public EventCallback OnConfirm{ get; set; }
+    bool supportSizing = true;
+
+    protected override void OnInitialized()
+    {
+        if (Pizza is {Special.FixedSize: not null })
+        {
+            Pizza.Size = Pizza.Special.FixedSize.Value;
+            supportSizing = false;
+        }
+    }
 }
